Added initial infrastructure for creating NuGet packgages

--- a/packages/build1.0.0/project.targets
+++ b/packages/build1.0.0/project.targets
@@ -4,7 +4,7 @@
   <Import Project="base.targets"/>
 
   <PropertyGroup>
-    <ExportDestinationFolder>$(ExportDir)\$(TargetClrVersion)</ExportDestinationFolder>
+    <ExportDestinationFolder>$(ExportBinDir)\$(TargetClrVersion)</ExportDestinationFolder>
   </PropertyGroup>
   
   <Target Name="Clean" DependsOnTargets="$(CleanDependsOn)">
