--- a/packages/build1.0.0/head.targets
+++ b/packages/build1.0.0/head.targets
@@ -4,6 +4,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <TargetClrVersion>.NetFramework 2.0</TargetClrVersion>
     <Properties>Configuration=$(Configuration);Platform=$(Platform)</Properties>
-    <ExportDir>$(MSBuildThisFileDirectory)..\..\bin</ExportDir>
+    <ExportDir>$(MSBuildThisFileDirectory)..\..\output</ExportDir>
+    <ExportBinDir>$(ExportDir)\lib</ExportBinDir>
   </PropertyGroup>
 </Project>
