Added the web.config.transform and ResourceManagement.config file to the Core NuGet package.

--- a/src/PackageSpecs/ResourceManagement/ResourceManagement.nuspec
+++ b/src/PackageSpecs/ResourceManagement/ResourceManagement.nuspec
@@ -13,5 +13,6 @@
   <files>
     <file src="..\..\..\output\lib\**\AlmWitt.Web.ResourceManagement.dll" target="lib" />
     <file src="..\..\..\output\lib\**\AlmWitt.Web.ResourceManagement.xml" target="lib" />
+    <file src="Content\**\*.*" target="Content" />
   </files>
 </package>
