--- a/src/ResourceManagement.Mvc/ResourceManagement.Mvc.csproj
+++ b/src/ResourceManagement.Mvc/ResourceManagement.Mvc.csproj
@@ -33,6 +33,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Web.Abstractions" />
     <Reference Include="System.Web.Mvc, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -47,6 +48,7 @@
   <ItemGroup>
     <Compile Include="Html\AjaxHelperExtensions.cs" />
     <Compile Include="Html\HtmlHelperExtensions.cs" />
+    <Compile Include="IgnoreRoutesForConsolidatedUrls.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResourceIncludeResolver.cs" />
     <Compile Include="ViewContextExtensions.cs" />
