--- a/src/PackageSpecs/ResourceManagement-Mvc/ResourceManagement-Mvc2.nuspec
+++ b/src/PackageSpecs/ResourceManagement-Mvc/ResourceManagement-Mvc2.nuspec
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <metadata xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
-    <id>ResourceManagement-Mvc</id>
+    <id>ResourceManagement-Mvc2</id>
     <version>1.9</version>
     <authors>Andy Alm</authors>
     <licenseUrl>http://www.opensource.org/licenses/bsd-license.php</licenseUrl>
