Added a ResourceManagement-Mvc3 package.

--- a/packages/build1.0.0/project.targets
+++ b/packages/build1.0.0/project.targets
@@ -3,50 +3,60 @@
 
   <Import Project="base.targets"/>
 
-  <PropertyGroup>
-    <Framework20DestinationFolder>$(ExportBinDir)\.NetFramework 2.0</Framework20DestinationFolder>
-    <Framework40DestinationFolder>$(ExportBinDir)\.NetFramework 4.0</Framework40DestinationFolder>
-    <Target20Framework Condition="$(Target20Framework)==''">true</Target20Framework>
-    <Target40Framework Condition="$(Target40Framework)==''">false</Target40Framework>
-  </PropertyGroup>
+  <ItemGroup Condition="@(BuildProfile)==''">
+    <BuildProfile Include="Default">
+      <Properties>TargetClrVersion=2.0</Properties>
+      <OutputPath></OutputPath>
+    </BuildProfile>
+  </ItemGroup>
   
-  <Target Name="Clean" DependsOnTargets="$(CleanDependsOn)">
-    <Delete Files="$(Framework20DestinationFolder)\%(ExportAssembly.Identity).dll" />
-    <Delete Files="$(Framework20DestinationFolder)\%(ExportAssembly.Identity).pdb" />
-    <Delete Files="$(Framework20DestinationFolder)\%(ExportAssembly.Identity).xml" />
-
-    <Delete Files="$(Framework40DestinationFolder)\%(ExportAssembly.Identity).dll" />
-    <Delete Files="$(Framework40DestinationFolder)\%(ExportAssembly.Identity).pdb" />
-    <Delete Files="$(Framework40DestinationFolder)\%(ExportAssembly.Identity).xml" />
-    
+  <Target Name="Clean" DependsOnTargets="$(CleanDependsOn);_CleanExportAssembly">
     <MSBuild Projects="@(Project)" Targets="Clean" Properties="$(Properties)" />
   </Target>
 
-  <Target Name="Build" DependsOnTargets="$(BuildDependsOn)">
-    <MSBuild Projects="@(Project)" Targets="Build" Properties="$(Properties);TargetClrVersion=2.0" Condition="$(Target20Framework)=='true'" />
+  <Target Name="Build" DependsOnTargets="$(BuildDependsOn);_BuildWithProfile">
+    
+  </Target>
+
+  <Target Name="Export" DependsOnTargets="$(ExportDependsOn);_ExportAssembly">
+  </Target>
+
+  <Target Name="_CleanExportAssembly">
+    <PropertyGroup>
+      <AssemblyName>%(ExportAssembly.Identity)</AssemblyName>
+    </PropertyGroup>
+
+    <Delete Files="bin\$(Configuration)\%(BuildProfile.OutputPath)\$(AssemblyName).dll"  />
+    <Delete Files="bin\$(Configuration)\%(BuildProfile.OutputPath)\$(AssemblyName).pdb"  />
+    <Delete Files="bin\$(Configuration)\%(BuildProfile.OutputPath)\$(AssemblyName).xml"  />
+
+    <Delete Files="$(ExportBinDir)\%(BuildProfile.OutputPath)\$(AssemblyName).dll"  />
+    <Delete Files="$(ExportBinDir)\%(BuildProfile.OutputPath)\$(AssemblyName).pdb"  />
+    <Delete Files="$(ExportBinDir)\%(BuildProfile.OutputPath)\$(AssemblyName).xml"  />
+
+  </Target>
+
+  <Target Name="_BuildWithProfile">
     <ItemGroup>
       <ObjFiles Include="obj\$(Configuration)\*.*" />
     </ItemGroup>
-    <Delete Files="@(ObjFiles)" Condition="$(Target20Framework)=='true' and $(Target40Framework)=='true'" />
-    <MSBuild Projects="@(Project)" Targets="Build" Properties="$(Properties);TargetClrVersion=4.0" Condition="$(Target40Framework)=='true'" />
+    <Delete Files="@(ObjFiles)" />
+    <PropertyGroup>
+      <ProjectPath>%(Project.FullPath)</ProjectPath>
+    </PropertyGroup>
+    <MSBuild Projects="$(ProjectPath)" Targets="Build" Properties="$(Properties);%(BuildProfile.Properties)" />
   </Target>
 
-  <Target Name="Export" DependsOnTargets="$(ExportDependsOn)">
-    <Copy SourceFiles="bin\$(Configuration)\%(ExportAssembly.Identity).dll" DestinationFolder="$(Framework20DestinationFolder)" Condition="Exists('bin\$(Configuration)\%(ExportAssembly.Identity).dll')" />
-    <Copy SourceFiles="bin\$(Configuration)\%(ExportAssembly.Identity).pdb" DestinationFolder="$(Framework20DestinationFolder)" Condition="Exists('bin\$(Configuration)\%(ExportAssembly.Identity).pdb')" />
-    <Copy SourceFiles="bin\$(Configuration)\%(ExportAssembly.Identity).xml" DestinationFolder="$(Framework20DestinationFolder)" Condition="Exists('bin\$(Configuration)\%(ExportAssembly.Identity).xml')" />
+  <Target Name="_ExportAssembly">
+    <PropertyGroup>
+      <AssemblyName>%(ExportAssembly.Identity)</AssemblyName>
+    </PropertyGroup>
 
-    <Copy SourceFiles="bin\$(Configuration)\%(ExportAssembly.Identity).dll" DestinationFolder="$(Framework40DestinationFolder)" Condition="Exists('bin\$(Configuration)\%(ExportAssembly.Identity).dll')" />
-    <Copy SourceFiles="bin\$(Configuration)\%(ExportAssembly.Identity).pdb" DestinationFolder="$(Framework40DestinationFolder)" Condition="Exists('bin\$(Configuration)\%(ExportAssembly.Identity).pdb')" />
-    <Copy SourceFiles="bin\$(Configuration)\%(ExportAssembly.Identity).xml" DestinationFolder="$(Framework40DestinationFolder)" Condition="Exists('bin\$(Configuration)\%(ExportAssembly.Identity).xml')" />
+    <Message Text="ExportBinDir is $(ExportBinDir)..." />
 
-    <Copy SourceFiles="bin\$(Configuration)\.NetFramework 2.0\%(ExportAssembly.Identity).dll" DestinationFolder="$(Framework20DestinationFolder)" Condition="Exists('bin\$(Configuration)\.NetFramework 2.0\%(ExportAssembly.Identity).dll')" />
-    <Copy SourceFiles="bin\$(Configuration)\.NetFramework 2.0\%(ExportAssembly.Identity).pdb" DestinationFolder="$(Framework20DestinationFolder)" Condition="Exists('bin\$(Configuration)\.NetFramework 2.0\%(ExportAssembly.Identity).pdb')" />
-    <Copy SourceFiles="bin\$(Configuration)\.NetFramework 2.0\%(ExportAssembly.Identity).xml" DestinationFolder="$(Framework20DestinationFolder)" Condition="Exists('bin\$(Configuration)\.NetFramework 2.0\%(ExportAssembly.Identity).xml')" />
-    
-    <Copy SourceFiles="bin\$(Configuration)\.NetFramework 4.0\%(ExportAssembly.Identity).dll" DestinationFolder="$(Framework40DestinationFolder)" Condition="Exists('bin\$(Configuration)\.NetFramework 4.0\%(ExportAssembly.Identity).dll')" />
-    <Copy SourceFiles="bin\$(Configuration)\.NetFramework 4.0\%(ExportAssembly.Identity).pdb" DestinationFolder="$(Framework40DestinationFolder)" Condition="Exists('bin\$(Configuration)\.NetFramework 4.0\%(ExportAssembly.Identity).pdb')" />
-    <Copy SourceFiles="bin\$(Configuration)\.NetFramework 4.0\%(ExportAssembly.Identity).xml" DestinationFolder="$(Framework40DestinationFolder)" Condition="Exists('bin\$(Configuration)\.NetFramework 4.0\%(ExportAssembly.Identity).xml')" />
+    <Copy SourceFiles="bin\$(Configuration)\%(BuildProfile.OutputPath)\$(AssemblyName).dll" DestinationFolder="$(ExportBinDir)\%(BuildProfile.OutputPath)" Condition="Exists('bin\$(Configuration)\%(BuildProfile.OutputPath)\$(AssemblyName).dll')" />
+    <Copy SourceFiles="bin\$(Configuration)\%(BuildProfile.OutputPath)\$(AssemblyName).pdb" DestinationFolder="$(ExportBinDir)\%(BuildProfile.OutputPath)" Condition="Exists('bin\$(Configuration)\%(BuildProfile.OutputPath)\$(AssemblyName).pdb')" />
+    <Copy SourceFiles="bin\$(Configuration)\%(BuildProfile.OutputPath)\$(AssemblyName).xml" DestinationFolder="$(ExportBinDir)\%(BuildProfile.OutputPath)" Condition="Exists('bin\$(Configuration)\%(BuildProfile.OutputPath)\$(AssemblyName).xml')" />
   </Target>
   
 </Project>
