Moved ResourceUrl caching into the ResourceManagementContext object.  Added some initial infrastructure for storing pre-compilation info outside of the ResourceManagement.config.

--- a/src/ResourceManagement.UnitTests/ResourceManagement.UnitTests.csproj
+++ b/src/ResourceManagement.UnitTests/ResourceManagement.UnitTests.csproj
@@ -101,6 +101,7 @@
     <Compile Include="TestResourceHttpHandler.cs" />
     <Compile Include="TestResourceManagementContext.cs" />
     <Compile Include="TestResourceManagementContext_GetResourceUrl.cs" />
+    <Compile Include="TestResourceManagementContext_PreConsolidation.cs" />
     <Compile Include="TestResourceType.cs" />
     <Compile Include="TestSupport\AssertionExtensions.cs" />
     <Compile Include="TestSupport\StubDependencyProvider.cs" />
