Added to the PreConsolidationReport so that when it is loaded into the ResourceManagementContext, it preloads dependencies and resource path mappings.

--- a/src/ResourceManagement/ResourceManagement.csproj
+++ b/src/ResourceManagement/ResourceManagement.csproj
@@ -92,15 +92,17 @@
     <Compile Include="Configuration\CompiledFilePersister.cs" />
     <Compile Include="Configuration\ConfigurationHelper.cs" />
     <Compile Include="Configuration\ConsolidatedUrlTemplate.cs" />
+    <Compile Include="Configuration\ContentFilterMap.cs" />
     <Compile Include="Configuration\CssGroupElement.cs" />
     <Compile Include="Configuration\CssGroupElementCollection.cs" />
-    <Compile Include="Configuration\IPreConsolidationInfoPersister.cs" />
+    <Compile Include="PreConsolidation\IPreConsolidationInfoPersister.cs" />
     <Compile Include="Configuration\IResourceManagementPlugin.cs" />
     <Compile Include="Configuration\MappedConfigLoader.cs" />
     <Compile Include="Configuration\PluginElement.cs" />
     <Compile Include="Configuration\PluginElementCollection.cs" />
-    <Compile Include="Configuration\PreConsolidationPersisterFactory.cs" />
-    <Compile Include="Configuration\PreConsolidationReport.cs" />
+    <Compile Include="PreConsolidation\PreConsolidatedDependencyCache.cs" />
+    <Compile Include="PreConsolidation\PreConsolidationPersisterFactory.cs" />
+    <Compile Include="PreConsolidation\PreConsolidationReport.cs" />
     <Compile Include="Configuration\PropertyNames.cs" />
     <Compile Include="Configuration\ResourceGroupElement.cs" />
     <Compile Include="Configuration\ResourceGroupElementCollection.cs" />
@@ -132,6 +134,8 @@
     <Compile Include="IResourceHandler.cs" />
     <Compile Include="IResourceHandlerFactory.cs" />
     <Compile Include="PathResourceMatch.cs" />
+    <Compile Include="PreConsolidation\PreConsolidatedResourceGroup.cs" />
+    <Compile Include="PreConsolidation\PreConsolidatedResourcePiece.cs" />
     <Compile Include="Registration\ConsolidatingResourceRegistry.cs" />
     <Compile Include="Registration\ConsolidatingResourceRegistryAccessor.cs" />
     <Compile Include="Registration\DependencyResolvingResourceRegistry.cs" />
