Converted PreConsolidation so that it no longer modifies the config file.  Instead it creates a ResourceManagement.compiled file in the website's bin folder.  It then uses that file to pre-populate its dependency and resource url resolving cache's.
Renamed compress to minify to increase the clarity of its purpose.

--- a/samples/AspNet-WebSiteProject/Website/ResourceManagement.config
+++ b/samples/AspNet-WebSiteProject/Website/ResourceManagement.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0"?>
 <almWitt.web.resourceManagement consolidate="true">
-  <clientScripts compress="true">
+  <clientScripts minify="true">
     <group consolidatedUrl="~/scripts/release/default.js">
       <exclude>
         <add pattern="/Secondary"/>
