Reworked the PreConsolidationReport to decouple dependencies from consolidation.

--- a/samples/Mvc-WebAppProject/Website/Website.csproj
+++ b/samples/Mvc-WebAppProject/Website/Website.csproj
@@ -93,7 +93,9 @@
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <None Include="Views\Home\Index.spark" />
-    <None Include="Views\IntegrationTests\Index.spark" />
+    <None Include="Views\IntegrationTests\Index.spark">
+      <SubType>Designer</SubType>
+    </None>
     <Content Include="Scripts\ResourceManagement-TestBootstrapper.js" />
     <Content Include="Views\bindings.xml" />
     <Content Include="Scripts\Dependency.js" />
