--- a/src/ResourceManagement.UnitTests/ResourceManagement.UnitTests.csproj
+++ b/src/ResourceManagement.UnitTests/ResourceManagement.UnitTests.csproj
@@ -84,7 +84,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="PreConsolidation\TestCompiledFilePersister.cs" />
-    <Compile Include="TestDefaultDependencyCache.cs" />
+    <Compile Include="TestHttpDependencyCache.cs" />
     <Compile Include="Registration\TestDependencyResolvingResourceRegistry.cs" />
     <Compile Include="Registration\TestConsolidatingResourceRegistry.cs" />
     <Compile Include="Registration\TestConsolidatingResourceRegistryAccessor.cs" />
